Add to yaml parsing example
Signed-off-by: F. Gold <fgold@vmware.com>

--- a/parse-yaml/config.yaml
+++ b/parse-yaml/config.yaml
@@ -8,3 +8,10 @@ faves:
 tools:
   leased: false
   qty: 1
+colors:
+  - visible: true
+    brightness: 10
+    name: "red"
+  - visible: false
+    brightness: 1
+    name: "far infrared"
